--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -22,3 +22,4 @@ jobs:
         env:
           TWITTER_USERNAME: ${{ secrets.TWITTER_USERNAME }}
           TWITTER_PASSWORD: ${{ secrets.TWITTER_PASSWORD }}
+          TWITTER_MFA_SECRET: ${{ secrets.TWITTER_MFA_SECRET }}
